--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Graffiti -- England -- History -- 18th century'
 - !lcsh 'English poetry -- 18th century'
 - !lcc 'GT'
+- GITenberg
 title: 'The Merry-Thought: or the Glass-Window and Bog-House Miscellany. Part 1'
 url: http://www.gutenberg.org/ebooks/20558
